Upgrade to latest DesyncedJavaScriptUtils
Remove tods.ts and switch to serialization provided by DesyncedJavaScriptUtils

Fixes #45

Vendors https://github.com/StageGames/DesyncedJavaScriptUtils/commit/1a92339440d181fed0f43eebf78ef6266f57c2be

--- a/website/index.html
+++ b/website/index.html
@@ -189,7 +189,7 @@ label6:
       }
       const obj = await ds.assemble(asm);
       const type = obj.frame ? "B" : "C";
-      const text = await ds.ObjectToDesyncedString(obj, type);
+      const text = ds.ObjectToDesyncedString(obj, type);
       let copied = false;
       if (navigator.userActivation.isActive) {
         try {
