Remove warnings when compiling in browser + speedup
Previously the typescript libraries were provided via tsvfs.createDefaultMapFromCDN
which includes additional definition files that we do not use, including dom.d.ts

This produces irrelevant warnings when compiling the typescript source files in the browser.
We now generate a lib_dts.ts, similar to behavior_dts.ts, which contains the relevant library
files that are used during compilation.

An added benefit is that compilation feels faster than before.

--- a/website/index.html
+++ b/website/index.html
@@ -42,6 +42,8 @@
     monaco.languages.typescript.typescriptDefaults.setCompilerOptions({
       target: monaco.languages.typescript.ScriptTarget.ESNext,
       lib: ["lib.es2023.d.ts"],
+      moduleResolution: monaco.languages.typescript.ModuleResolutionKind.NodeJs,
+      module: monaco.languages.typescript.ModuleKind.ESNext
     });
     const behaviorFilename = "ts:behavior.d.ts";
     monaco.languages.typescript.typescriptDefaults.addExtraLib(
@@ -184,10 +186,10 @@ label6:
         asm = code;
       } else {
         const compiler = await compilerPromise;
-        const prog = await compiler.makeProgram(code);
-        asm = await compiler.compileProgram(prog);
+        const prog = compiler.makeProgram(code);
+        asm = compiler.compileProgram(prog);
       }
-      const obj = await ds.assemble(asm);
+      const obj = ds.assemble(asm);
       const type = obj.frame ? "B" : "C";
       const text = ds.ObjectToDesyncedString(obj, type);
       let copied = false;
