Support importing subroutines from other files
Currently only useful locally, but perhaps the web based editor
could support multiple files at some point as well

--- a/website/index.html
+++ b/website/index.html
@@ -191,7 +191,7 @@ label6:
         asm = code;
       } else {
         const prog = compiler.makeProgram(code);
-        asm = compiler.compileProgram(prog);
+        asm = compiler.compileProgram("index.ts", prog);
       }
 
       const obj = compiler.assemble(asm);
